2010-09-08  MORITA Hajime  <morrita@google.com>

        Reviewed by Tony Chang.

        spelling underline gets lost on backspace
        https://bugs.webkit.org/show_bug.cgi?id=41423

        moveParagraphs() did make a DOM range by serializing source range
        and deserializing it back, and markers are gone during the process.
        This change marks that DOM range again.

        Test: editing/spelling/spelling-backspace-between-lines.html

        * editing/CompositeEditCommand.cpp:
        (WebCore::CompositeEditCommand::moveParagraphs):
        * editing/Editor.cpp:
        (WebCore::Editor::clearMisspellingsAndBadGrammar): Added.
        (WebCore::Editor::markMisspellingsAndBadGrammar): Added.
        * editing/Editor.h:

2010-09-08  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        text/plain documents that start with \n trigger ASSERT
        https://bugs.webkit.org/show_bug.cgi?id=45409

        Because the TextDocumentParser uses a <pre> element to show the text,
        it ran into a requirement from HTML5 to skip any initial \n character
        tokens inside a <pre> element.  We don't want the behavior for
        TextDocuments, so I've loosened our ASSERTs and added a comment and a
        test to document the correct behavior.

        Test: fast/tokenizer/text-plain.html

        * html/parser/HTMLTokenizer.cpp:
        (WebCore::HTMLTokenizer::nextToken):

2010-09-08  James Robinson  <jamesr@chromium.org>

        Reviewed by Kenneth Russell.

        [chromium] Always do 2d canvas clearRect() in hardware
        https://bugs.webkit.org/show_bug.cgi?id=45415

        r67003 forced Canvas 2d's clearRect() to happen in software if a gradient/shadow/etc was
        active.  This is subtly wrong for mixed mode rendering since it results in only the
        software backing store being cleared and not the hardware.  This forces clearRect() to